# ninja_killer

./: CMakeLists.txt  Main.cpp  OgreWrapper.h  OisController.cpp  OisController.h  README.md  plugins.cfg
GameLogic/: CMakeLists.txt  IController.h  IGameLoop.h  IGameObserver.h
GameLogic/Entities/: Camera.h  ICollisionCallback.h  IEntity.h  LookingObject.h  MovingObject.h  ShootingObject.h
GameLogic/Entities/PhysicsObjects/: BulletControllable.h  BulletVisibleObjectState.h
GameLogic/Entities/VisibleObjects/: Character.cpp  Character.h  Projectile.h  SimpleVisibleObjectState.h  VisibleObject.h
GameLogic/EntityBehaviors/: IPointOfInterest.h
GameLogic/EntityBehaviors/BehaviorTree/: IBehavior.h
GameLogic/EntityBehaviors/BehaviorTree/Composites/: CompositeBehaviorBase.h  ParallelBehavior.h  SelectorBehavior.h  SequenceBehavior.h
GameLogic/EntityBehaviors/BehaviorTree/Decorators/: LiarBehavior.h  ProxyBehavior.h
GameLogic/EntityBehaviors/Camera/: CameraAction.h  CameraLookAt.h  CameraMove.h
GameLogic/EntityBehaviors/Camera/CharacterTracking/: CharacterLookAtPoint.h  PointAroundCharacter.h  TrackCharacterBehavior.h
GameLogic/EntityBehaviors/Character/AIActions/: AIFollowCharacter.h  AIGoto.h  AITurnTowards.h  AITurnTowardsCharacter.h
GameLogic/EntityBehaviors/Character/AIActions/LookActions/: AILookAt.h  AILookAtCharacter.h
GameLogic/EntityBehaviors/Character/AIActions/MovementActions/: AIFollowCharacter.h  AIGoto.h  AITurnTowards.h  AITurnTowardsCharacter.h
GameLogic/EntityBehaviors/Character/AIActions/WeaponActions/: AIAim.h  AIMelee.h  AIShoot.h
GameLogic/EntityBehaviors/Character/AIConditions/: AICharacterWithinRange.h
GameLogic/EntityBehaviors/Character/AIController/: AIContext.h  AILookController.h  AIMovementController.h  AIWeaponController.h
GameLogic/GameLoop/: GameFactory.cpp  GameFactory.h  GameLoop.h
GameLogic/GameLoop/BehaviorManager/: BehaviorLoaderBase.h  BehaviorManager.h
GameLogic/GameLoop/BehaviorManager/AIBehaviorLoader/: AIBehaviorLoaderBase.h  AIFollowCharacterLoader.h  AITurnTowardsCharacterLoader.h
GameLogic/GameLoop/BehaviorManager/AIBehaviorLoader/Conditions/: AICharacterWithinRangeLoader.h
GameLogic/GameLoop/BehaviorManager/BehaviorTreeLoader/: CompositeBehaviorLoader.h  ParallelBehaviorLoader.h
GameLogic/GameLoop/EntityManager/: EntityManager.h
GameLogic/GameLoop/EntityManager/BulletLoader/: BulletBodyLoader.h  BulletBoxLoader.h  BulletCompoundLoader.h  BulletLoaderUtil.cpp  BulletLoaderUtil.h  BulletSphereLoader.h
GameLogic/GameLoop/EntityManager/ObjectLoader/: CharacterLoader.h  VisibleLoader.h  VisibleObjectLoader.h
GameLogic/Physics/: BulletWorldWrapper.cpp  BulletWorldWrapper.h  CMakeLists.txt  PhysWorld.cpp  PhysWorld.h
GameLogic/Physics/BulletBuilder/: BulletBodyBuilder.h
GameLogic/Physics/PhysBuilder/: PhysBodyBuilder.cpp  PhysBodyBuilder.h  PhysBoxBuilder.h  PhysCompositeBuilder.cpp  PhysCompositeBuilder.h  PhysShapeBuilder.h  PhysSphereBuilder.h
GameLogic/PlayerController/: PlayerCameraController.h  PlayerLookController.h  PlayerMovementController.h  PlayerWeaponController.h
GameLogic/Utils/: AngleUtils.cpp  AngleUtils.h  ControllerDecorator.h  EnhancedController.h  PIController.h  PIDController.h  SimpleControllerRepository.h
(+63 files in other folders)
